--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,10 @@
           <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
           <meta name="viewport" content="width=device-width, initial-scale=1" />
           <meta name="theme-color" content="#000000" />
-          <meta name="description" content="Web site created using create-react-app" />
+          <meta
+               name="description"
+               content="'Promenade History' — это уникальный историческо-молодежный проект, в котором мы хотим повысить культурный уровень молодежи и рассказать об истории городов в формате интерактивной прогулки."
+          />
           <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
           <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
           <title>Promenade History</title>
