--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,14 +9,14 @@
                name="description"
                content="'Promenade History' — это уникальный историческо-молодежный проект, в котором мы хотим повысить культурный уровень молодежи и рассказать об истории городов в формате интерактивной прогулки."
           />
-          <meta property="og:title" content="Интерактивная Прогулка" />
+          <meta property="og:title" content="Promenade History" />
           <meta property="og:site_name" content="Promenade History" />
           <meta property="og:url" content="https://promenade-history.ru/" />
           <meta
                property="og:description"
                content="'Promenade History' — это уникальный историческо-молодежный проект, в котором мы хотим повысить культурный уровень молодежи и рассказать об истории городов в формате интерактивной прогулки."
           />
-          <meta property="og:image" content="https://promenade-history.ru/logo512.png" />
+          <meta property="og:image" content="https://promenade-history.ru/logoSquare512.png" />
           <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
           <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
           <title>Promenade History</title>
